fix: change column "value" name to non-keyword

--- a/backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -27,7 +27,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: value
+                  name: exchange_value
                   type: DOUBLE
                   constraints:
                     nullable: false
